放弃搜索服务&开始页面服务